# HydroRollCore

./: .gitignore  .pdm-python  CHANGELOG.md  Cargo.toml  README.md  README.rst  noxfile.py  pyproject.toml
docs/_static/: .$Structures.svg.dtmp
docs/source/: COPYING.rst  changelog.rst  conf.py  index.rst
docs/source/pages/: contributing.rst  quick-start.rst
examples/: brp_character.py  config.toml
examples/BRP/src/: __init__.py  character.py
examples/COC7/: Character.py  Wiki.py  __init__.py
examples/rules/BRP/: __init__.py
examples/rules/COC/: __init__.py
examples/rules/COC7/: __init__.py
hrc/: LibCore.py  __init__.py  config.py  core.py  dependencies.py  event.py  log.py  typing.py  utils.py
hrc/dev/: __init__.py
hrc/dev/grps/: v1.py
hrc/rule/: __init__.py
hrc/rule/BaseRule/: __init__.py
hrc/rules/: __init__.py  config.py
hrc/rules/BaseRule/: CharacterCard.py  JudgeRule.py  __init__.py
hrc/service/: utils.py
hrc/service/websocket/: __init__.py
hydro_roll_core/: __init__.py  cli.py  libcore.pyi
hydro_roll_core/development/: character.py
hydro_roll_core/rules/BaseRule/: JudgeRule.py  __init__.py
src/: lib.rs  main.rs
src/hrc/: _core.pyi  config.py  typing.py
src/hrc/dev/: echo.py
src/hrc/doc/: __init__.py
src/hrc/rule/: __init__.py
src/hrc/service/: __init__.py
src/hrc/service/console/: __init__.py
src/hrc/service/http/: __init__.py
src/perf/: mod.rs
tests/: test_BRP_pdfquery.py  test_BaseRule.py  test_corelib.py  test_service.py
