[package]
name = "hydro_roll_core"
version = "0.0.1-alpha.1"
edition = "2021"
description = "Core Lib for HydroRoll System."
license = "MIT"
documentation = "https://core.hydroroll.team/"
homepage = "https://core.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/HydroRollCore"
authors = ["HsiangNianian <i@jyunko.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hydro_roll_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["abi3-py39"] }